--- a/01_javascript/warmup/index.html
+++ b/01_javascript/warmup/index.html
@@ -2,12 +2,11 @@
 <html>
 <head>
 	<title>Conditionals</title>
+	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 </head>
 <body>
-
   <h1>Hello World</h1>
   <p>CMND + OPT + J</p>
-  
-  <script src="main.js"></script>
+  <script src="warmup01.js"></script>
 </body>
 </html>
